@@ -1,3 +1,8 @@
+Mon Jan  8 12:10:08 GMT 2007  Colin Watson  <cjwatson@debian.org>
+
+	* acinclude.m4 (MAN_FUNC_FNMATCH): New macro to check whether
+	  fnmatch supports the FNM_CASEFOLD flag (a GNU extension).
+
 Mon Jan  8 10:39:24 GMT 2007  Colin Watson  <cjwatson@debian.org>
 
 	* lib/xsigaction.c: New file: sigaction with EINTR checking.
